<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LayoutPractice</string>
    <string name="hello_world">Hello world! コミット4</string>
    <string name="action_settings">Settings</string>
    <string name="gravity_right1">Gravity Right1</string>
    <string name="gravity_right2">Gravity Right2</string>
    <string name="text1">Text1</string>
    <string name="text2">Text2</string>
    <string name="text3">Text3</string>
    <string name="text4">Text4</string>
    <string name="text5">Text5</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="layout1">Layout1へ</string>
    <string name="layout2">Layout2へ</string>
    <string name="layout3">Layout3へ</string>
    <string name="desc">No Image</string>
    <string name="title_activity_layout1">LayoutActivity1</string>
    <string name="title_activity_layout2">LayoutActivity2</string>

</resources>
